tests/baselines/reference/parserObjectCreationArrayLiteral3.errors.txt
==== tests/cases/compiler/parserObjectCreationArrayLiteral3.ts (2 errors) ====
    new Foo[]();
           ~~
!!! parserObjectCreationArrayLiteral3.ts(1,8): error TS2068: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
        ~~~
!!! parserObjectCreationArrayLiteral3.ts(1,5): error TS2095: Cannot find name 'Foo'.